--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="main-menu">
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			  <div class="container">
-			    <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+			    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
 			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			      <span class="navbar-toggler-icon"></span>
 			    </button>
@@ -97,7 +97,8 @@
 				<div class="col-md-12">
 					<div class="banner-inner">
 						<h1>Made for Designers</h1>
-						<p>Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
+						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
+						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
 						<a href="#" class="btn btn-info">Get Started Now</a>
 					</div>
 				</div>
@@ -113,7 +114,8 @@
 				<div class="col-md-12">
 					<div class="clean-top">
 						<h2 class="myh2">Beautiful. Clean. Responsive.</h2>
-						<p class="myp">REEN is a high-quality solution for those who want a beautiful website in no time. <br> It's fully responsive and will adapt itself to any mobile device. iPad, iPhone, Android, <br> it doesn't matter. Your content will always looks its absolute best</p>
+						<p class="myp mobile-display">REEN is a high-quality solution for those who want a beautiful website in no time. It's fully responsive and will adapt itself to any mobile device. iPad, iPhone, Android, it doesn't matter. Your content will always looks its absolute best</p>
+						<p class="myp desktop-display">REEN is a high-quality solution for those who want a beautiful website in no time. <br> It's fully responsive and will adapt itself to any mobile device. iPad, iPhone, Android, <br> it doesn't matter. Your content will always looks its absolute best</p>
 					</div>
 				</div>
 				<div class="col-md-12">
