--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
 				<div class="col-md-12">
 					<div class="contact-inner">
 						<h2 class="myh2">Want to work with us?</h2>
-						<p class="myp">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor. <br> Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
+						<p class="myp mobile-display">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
+						<p class="myp desktop-display">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor. <br> Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
 						<a href="#" class="btn btn-info">Get in Touch</a>
 					</div>
 				</div>
