--- a/index.html
+++ b/index.html
@@ -92,16 +92,56 @@
 	<!-- header section end -->
 	<!-- banner section start -->
 	<section class="banner">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="banner-inner">
+		<div class="container-fluid">
+			<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+			  <div class="carousel-indicators">
+			    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			  </div>
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="img/banner.jpg" class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <div class="banner-inner">
 						<h1>Made for Designers</h1>
 						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
 						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
 						<a href="#" class="btn btn-info">Get Started Now</a>
 					</div>
-				</div>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="img/slider-1.jpg" class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <div class="banner-inner">
+						<h1>Made for Designers</h1>
+						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
+						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
+						<a href="#" class="btn btn-info">Get Started Now</a>
+					</div>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="img/slider-2.jpg" class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <div class="banner-inner">
+						<h1 style="color: #506a85;">Made for Designers</h1>
+						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
+						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
+						<a href="#" class="btn btn-info">Get Started Now</a>
+					</div>
+			      </div>
+			    </div>
+			  </div>
+			  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="visually-hidden">Previous</span>
+			  </button>
+			  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="visually-hidden">Next</span>
+			  </button>
 			</div>
 		</div>
 	</section>
@@ -195,17 +235,17 @@
 				<div class="work-carousel">
 					<div class="owl-carousel owl-theme">
 					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-2.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-3.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-4.jpg" alt=""></div>
 					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-2.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-3.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-4.jpg" alt=""></div>
 					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
-					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-3.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-4.jpg" alt=""></div>
+					    <div class="item"><img src="img/carousel-2.jpg" alt=""></div>
 					</div>
 				</div>
 			</div>
@@ -264,9 +304,11 @@
 						<h4>Get in Touch</h4>
 						<p>Doloreiur quia commolu ptatemp dolupta oreprerum tibusam eumenis et consent accullignis dentibea autem inisita.</p>
 						<div class="information">
-							<a href="#"><i class="fa fa-envelope"></i> 84 Street, City, State 24813</a>
-							<a href="#"><i class="fa fa-envelope"></i> 84 Street, City, State 24813</a>
-							<a href="#"><i class="fa fa-envelope"></i> 84 Street, City, State 24813</a>
+							<ul>
+								<li><i class="fas fa-map-marker-alt"></i> 84 Street, City, State 24813</li>
+								<li><i class="fas fa-mobile-alt"></i> +00 (123) 456 78 90</li>
+								<li><i class="far fa-envelope"></i> info@reen.com</li>
+							</ul>
 						</div>
 					</div>
 				</div>
