--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			    <div class="carousel-item active">
 			      <img src="img/banner.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <div class="banner-inner">
+			        <div class="banner-inner text-left">
 						<h1>Made for Designers</h1>
 						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
 						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
@@ -114,7 +114,7 @@
 			    <div class="carousel-item">
 			      <img src="img/slider-1.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <div class="banner-inner">
+			        <div class="banner-inner text-center">
 						<h1>Made for Designers</h1>
 						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
 						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
@@ -125,7 +125,7 @@
 			    <div class="carousel-item">
 			      <img src="img/slider-2.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <div class="banner-inner">
+			        <div class="banner-inner text-right">
 						<h1 style="color: #506a85;">Made for Designers</h1>
 						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
 						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
