--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- bootstrap.css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- wow animate css -->
+	<link rel="stylesheet" href="css/animate.min.css">
 	<!-- style.css -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -53,7 +55,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="main-menu">
+		<div class="main-menu navbar-wrapper">
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			  <div class="container">
 			    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
@@ -160,7 +162,7 @@
 				</div>
 				<div class="col-md-12">
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-4 wow animate__slideInLeft" data-wow-duration="1.5s">
 							<div class="clean-inner">
 								<div class="clean-img">
 									<img src="img/clean-icon-1.png" alt="">
@@ -171,7 +173,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 wow animate__slideInUp" data-wow-duration="1.5s">
 							<div class="clean-inner">
 								<div class="clean-img">
 									<img src="img/clean-icon-1.png" alt="">
@@ -182,7 +184,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 wow animate__slideInRight" data-wow-duration="1.5s">
 							<div class="clean-inner">
 								<div class="clean-img">
 									<img src="img/clean-icon-1.png" alt="">
@@ -204,7 +206,7 @@
 	<section class="work section-gap">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12 wow animate__fadeInUp" data-wow-duration="1.5s">
 					<div class="work-top">
 						<h2 class="myh2">Check out our latest works</h2>
 						<p class="myp">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
@@ -212,7 +214,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-6 wow animate__slideInLeft" data-wow-duration="1.5s">
 					<div class="work-inner">
 						<img src="img/latest-1.jpg" alt="">
 						<div class="work-content">
@@ -221,7 +223,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 wow animate__slideInRight" data-wow-duration="1.5s">
 					<div class="work-inner">
 						<img src="img/latest-2.jpg" alt="">
 						<div class="work-content">
@@ -232,7 +234,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="work-carousel">
+				<div class="work-carousel wow animate__fadeInUp" data-wow-duration="1.5s">
 					<div class="owl-carousel owl-theme">
 					    <div class="item"><img src="img/carousel-1.jpg" alt=""></div>
 					    <div class="item"><img src="img/carousel-2.jpg" alt=""></div>
@@ -256,7 +258,7 @@
 	<section class="contact section-gap">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12 wow animate__fadeInUp" data-wow-duration="1.5s"">
 					<div class="contact-inner">
 						<h2 class="myh2">Want to work with us?</h2>
 						<p class="myp mobile-display">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
@@ -356,6 +358,13 @@
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
+	<!-- stickUp.js link hare -->
+	<script src="js/stickUp.min.js"></script>
+	<!-- wow animate js -->
+	<script src="js/wow.min.js"></script>
+    <script>
+    	new WOW().init();
+    </script>
 	<script>
 		$('.owl-carousel').owlCarousel({
 		    loop:true,
@@ -377,5 +386,15 @@
 		    }
 		});
 	</script>
+	<script type="text/javascript">
+        //initiating jQuery
+        jQuery(function($) {
+            $(document).ready( function() {
+            //enabling stickUp on the '.navbar-wrapper' class
+        	$('.navbar-wrapper').stickUp();
+        	});
+        });
+
+    </script>
 </body>
 </html>
