--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 	<!-- header section start -->
-	<div class="header">
+	<div class="header" id="go-top">
 		<div class="header-top">
 			<div class="container">
 				<div class="row">
@@ -105,7 +105,7 @@
 			    <div class="carousel-item active">
 			      <img src="img/banner.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <div class="banner-inner text-left">
+			        <div class="banner-inner">
 						<h1>Made for Designers</h1>
 						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
 						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
@@ -116,7 +116,7 @@
 			    <div class="carousel-item">
 			      <img src="img/slider-1.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <div class="banner-inner text-center">
+			        <div class="banner-inner">
 						<h1>Made for Designers</h1>
 						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
 						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
@@ -127,7 +127,7 @@
 			    <div class="carousel-item">
 			      <img src="img/slider-2.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
-			        <div class="banner-inner text-right">
+			        <div class="banner-inner">
 						<h1 style="color: #506a85;">Made for Designers</h1>
 						<p class="mobile-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
 						<p class="desktop-display">Create your online portfolio in minutes with the professionally and lovingly designed REEN <br> website template. Customize your site with versatile and easy to use features.</p>
@@ -352,6 +352,8 @@
 			</div>
 		</div>
 	</section>
+
+	<a href="#go-top" class="btn btn-info scrool-top"><i class="fa fa-arrow-up"></i></a>
 
 	<!-- js link start  -->
 
